# Tevsogor

./: .gitignore  Arrows.h  Background.h  CMakeLists.txt  Constants.h  Enemy.h  First_Level.h  Person.cpp  Person.h  Pull of  enemies.cpp  Pull of platforms.cpp  Pull_of_background.cpp  Pull_of_floor.cpp  README.md  main.cpp
inc/: Block.h  Constants.h  Enemy.h  Person.h  Text.h  functions.h
src/: Arrow.cpp  Block.cpp  Enemy.cpp  Person.cpp  Person_dop_functions.cpp  Pull_of_background.cpp  Pull_of_enemies.cpp  Pull_of_floor.cpp  Pull_of_platforms.cpp
